--- a/style.css
+++ b/style.css
@@ -5,16 +5,13 @@
     border: border-box;
 }
 body{
-    background-color: #F0E7D8;
+    background-color: white;
 }
 
-.main-section{
-    display: flex;
-    justify-content: space-evenly;
-
-}
+/* upper-panel */
 .upper-panel{
-    background-color: #A63A50;
+    background-color: #000000;
+    color: white;
     border: 2px solid black;
     height: 60 px;
     display: flex;
@@ -24,18 +21,71 @@ body{
 }
 
 
-.input-output{
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    height: 500px;
-    border: 2px solid black;
-    margin-top: 40px;
-    font-size: larger;
+/* food-picture section */
+.food-pic{
+    /* border-radius: 1rem; */
+    height: 400px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    margin: 30px;  
+    background-size: cover;  
 }
+
+
+.pictures{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    margin: 10px;
+    margin-top: 40px;
+}
+
+.box{
+    border: 1.5px solid black;
+    height: 250px;
+    width: 350px;
+    margin: 10px;
+    border-radius: 1rem;
+}
+
+.box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1rem;
+}
+.food{
+    background-size: cover;
+    margin-top: 1rem ;
+    margin-bottom: 1rem;
+}
+
+.pic-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* input output section */
+.main-box{
+    height: 600px;
+    margin-left: 100px;
+    margin-right: 100px;
+
+}
+
+.input-output{
+    height: 600px;
+    border: 2px solid black;
+    border-radius: 3rem;
+    background-size: cover;
+}
+
 
 .input-box{
     padding-left: 20px;
+    margin-top: 60px;
 }
 .input{
     width: 250px;
@@ -43,29 +93,29 @@ body{
 }
 
 .output-box{
-    margin-top: 30px;
+    margin-top: 40px;
     padding: 20px;
 }
 
-.food-pic{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 1000px;
-    width: 400px;
+/* ingredient pictures section */
+
+.ingredient{
+    height: 200px;
     border: 2px solid black;
-    margin-top: 30px;
-    margin-left: 300px;    
+    margin: 30px;   
+
 }
 
-.food{
-    background-size: cover;
-    height: 250px;
-    margin-top: 1rem ;
-    margin-bottom: 1rem;
+.ingredient-box{
+    height: 200px;
+    display: flex;
+    justify-content: space-evenly;
 }
 
-.box{
-    margin-left: 1rem;
-    margin-right: 1rem;
+.boxi{
+    border: 1.5px solid black;
+    height: 200 px;
+    width: 150px;
+    margin: 10px;
+    border-radius: 1rem;
 }
